--- a/_data/l10n/es.yml
+++ b/_data/l10n/es.yml
@@ -2,7 +2,7 @@ lang-url: 'es/'
 site-title: 'Actívate en Mozilla'
 faq: 'FAQ'
 languages: 'Idiomas'
-submit-translation: 'Enviar una traducción de esta página'
+submit-translation: 'Enviar una traducción/mejora de esta página'
 twitter-text1: 'Compartir esta página en twitter'
 twitter-text2: 'Estoy colaborando en'
 twitter-text3: 'en %40Mozilla Comprueba lo fácil que es %23mozactivate'
