--- a/_data/l10n/es.yml
+++ b/_data/l10n/es.yml
@@ -1,6 +1,7 @@
 lang-url: 'es/'
 site-title: 'Actívate en Mozilla'
 faq: 'FAQ'
+roadmap: 'Roadmap'
 languages: 'Idiomas'
 submit-translation: 'Enviar una traducción/mejora de esta página'
 twitter-text1: 'Compartir esta página en twitter'
