Issue #10 : Adding Participaiton to site nav

--- a/_data/l10n/es.yml
+++ b/_data/l10n/es.yml
@@ -2,6 +2,7 @@ lang-url: 'es/'
 site-title: 'Actívate en Mozilla'
 faq: 'FAQ'
 roadmap: 'Cronograma'
+participation: 'Participation'
 languages: 'Idiomas'
 submit-translation: 'Enviar una traducción/mejora de esta página'
 twitter-text1: 'Compartir esta página en twitter'
