Initial tranlate to this strings

--- a/_data/l10n/pt.yml
+++ b/_data/l10n/pt.yml
@@ -1,12 +1,12 @@
 lang-url: 'pt/'
-site-title: 'Actívate en Mozilla -PT  '
+site-title: 'Ativa Mozilla'
 faq: 'FAQ'
 roadmap: 'Cronograma'
-participation: 'Participación'
+participation: 'Participação'
 languages: 'Idiomas'
-submit-translation: 'Enviar una traducción/mejora de esta página'
-twitter-text1: 'Compartir esta página en twitter'
-twitter-text2: 'Estoy colaborando en'
-twitter-text3: 'en %40Mozilla Comprueba lo fácil que es %23mozactivate'
-facebook-text: 'Compartir esta página en Facebook'
-share: "Compartir"
+submit-translation: 'Envie uma tradução/melhora para esta página'
+twitter-text1: 'Compartilhar esta página no twitter'
+twitter-text2: 'Estou colaborando para'
+twitter-text3: ' %40Mozilla Veja como é fácil contribuir também %23mozactivate'
+facebook-text: 'Compartilhar esta página no Facebook'
+share: "Compartilhar"
