Revisado o artigo pt-br.yml

--- a/_data/l10n/pt-br.yml
+++ b/_data/l10n/pt-br.yml
@@ -1,7 +1,7 @@
 lang-url: 'pt-br/'
-site-title: 'Ativo na Mozilla'
+site-title: 'Active Mozilla'
 faq: 'FAQ'
-roadmap: 'Cronograma'
+roadmap: 'Roteiro'
 participation: 'Participação'
 languages: 'Idiomas'
 submit-translation: 'Enviar uma tradução/melhorar este site'
