--- a/_data/l10n/pt.yml
+++ b/_data/l10n/pt.yml
@@ -1,5 +1,5 @@
 lang-url: 'pt/'
-site-title: 'Ativa Mozilla'
+site-title: 'Activate Mozilla'
 faq: 'FAQ'
 roadmap: 'Cronograma'
 participation: 'Participação'
