--- a/_data/l10n/es.yml
+++ b/_data/l10n/es.yml
@@ -4,6 +4,7 @@ activities: 'Activities'
 roadmap: 'Cronograma'
 participation: 'Participación'
 faq: 'FAQ'
+leaderboard: 'Leaderboard'
 languages: 'Idiomas'
 submit-translation: 'Enviar una traducción/mejora de esta página'
 twitter-text1: 'Compartir esta página en twitter'
