--- a/_data/l10n/pt.yml
+++ b/_data/l10n/pt.yml
@@ -4,6 +4,7 @@ activities: 'Activities'
 roadmap: 'Cronograma'
 participation: 'Participação'
 faq: 'FAQ'
+leaderboard: 'Leaderboard'
 languages: 'Idiomas'
 submit-translation: 'Envie uma tradução/melhora para esta página'
 twitter-text1: 'Compartilhar esta página no twitter'
