--- a/_data/l10n/fr.yml
+++ b/_data/l10n/fr.yml
@@ -4,6 +4,7 @@ activities: 'Activities'
 roadmap: 'Roadmap'
 participation: 'Participation'
 faq: 'FAQ'
+leaderboard: 'Leaderboard'
 languages: 'Languages'
 submit-translation: 'Submit a translation/improvement for this page'
 twitter-text1: 'Share this page on Twitter'
