--- a/_data/l10n/pt.yml
+++ b/_data/l10n/pt.yml
@@ -4,7 +4,7 @@ faq: 'FAQ'
 roadmap: 'Cronograma'
 participation: 'Participação'
 languages: 'Idiomas'
-submit-translation: 'Envie uma tradução/melhora para esta página'
+submit-translation: 'Envie uma tradução/melhoria para esta página'
 twitter-text1: 'Compartilhar esta página no twitter'
 twitter-text2: 'Estou colaborando para'
 twitter-text3: ' %40Mozilla Veja como é fácil contribuir também %23mozactivate'
