--- a/locales/es-ES/test-pilot.xliff
+++ b/locales/es-ES/test-pilot.xliff
@@ -126,7 +126,7 @@ parent: activities</source>
   <target xml:lang="es-ES"></target>
 </trans-unit>
 <trans-unit id="29">
-  <source xml:lang="en-US"><bpt id="l1">[</bpt>Install Test Pilot<ept id="l1">]</ept><bpt id="l2">(</bpt>http://testpilot.firefox.com/experiments?utm_source=activity.mozilla.community&utm_medium=referral&utm_campaign=moz-community-2016<ept id="l2">)</ept></source>
+  <source xml:lang="en-US"><bpt id="l1">[</bpt>Install Test Pilot<ept id="l1">]</ept><bpt id="l2">(</bpt>http://testpilot.firefox.com/experiments?utm_source=activity.mozilla.community%26utm_medium=referral%26utm_campaign=moz-community-2016<ept id="l2">)</ept></source>
   <target xml:lang="es-ES"></target>
 </trans-unit>
 <trans-unit id="30">
