--- a/_data/l10n/es.yml
+++ b/_data/l10n/es.yml
@@ -3,6 +3,7 @@ site-title: 'Actívate en Mozilla'
 faq: 'FAQ'
 roadmap: 'Cronograma'
 participation: 'Participación'
+activities: 'Activities'
 languages: 'Idiomas'
 submit-translation: 'Enviar una traducción/mejora de esta página'
 twitter-text1: 'Compartir esta página en twitter'
