--- a/_data/l10n/fr.yml
+++ b/_data/l10n/fr.yml
@@ -3,6 +3,7 @@ site-title: 'Activate Mozilla'
 faq: 'FAQ'
 roadmap: 'Roadmap'
 participation: 'Participation'
+activities: 'Activities'
 languages: 'Languages'
 submit-translation: 'Submit a translation/improvement for this page'
 twitter-text1: 'Share this page on Twitter'
