--- a/_data/l10n/pt.yml
+++ b/_data/l10n/pt.yml
@@ -3,6 +3,7 @@ site-title: 'Activate Mozilla'
 faq: 'FAQ'
 roadmap: 'Cronograma'
 participation: 'Participação'
+activities: 'Activities'
 languages: 'Idiomas'
 submit-translation: 'Envie uma tradução/melhora para esta página'
 twitter-text1: 'Compartilhar esta página no twitter'
