--- a/locales/pt-PT/rust-hack.xliff
+++ b/locales/pt-PT/rust-hack.xliff
@@ -15,19 +15,24 @@ permalink: /rust-hack/
 lang: en
 ref: rust-hack
 parent: activities</source>
-  <target xml:lang="pt-PT"></target>
+  <target xml:lang="pt-PT">layout: page
+title:  "Dive Into Rust"
+permalink: /rust-hack/
+lang: en
+ref: rust-hack
+parent: activities</target>
 </trans-unit>
 <trans-unit id="2">
   <source xml:lang="en-US">redirect_from: "/developer-engagement/rust-hack/"</source>
-  <target xml:lang="pt-PT"></target>
+  <target xml:lang="pt-PT">redirect_from: "/developer-engagement/rust-hack/"</target>
 </trans-unit>
 <trans-unit id="3">
   <source xml:lang="en-US">TOC</source>
-  <target xml:lang="pt-PT"></target>
+  <target xml:lang="pt-PT">TOC</target>
 </trans-unit>
 <trans-unit id="4">
   <source xml:lang="en-US">{:toc}</source>
-  <target xml:lang="pt-PT"></target>
+  <target xml:lang="pt-PT">{:toc}</target>
 </trans-unit>
 <trans-unit id="5">
   <source xml:lang="en-US">Rust is a systems programming language that runs blazingly fast, prevents segfaults, and guarantees thread safety.</source>
