Add Portuguese translation

--- a/_data/l10n/pt.yml
+++ b/_data/l10n/pt.yml
@@ -4,10 +4,10 @@ activities: 'Activities'
 roadmap: 'Cronograma'
 participation: 'Participação'
 faq: 'FAQ'
-leaderboard: 'Leaderboard'
+leaderboard: 'Organizadores'
 languages: 'Idiomas'
-submit-translation: 'Envie uma tradução/melhora para esta página'
-twitter-text1: 'Compartilhar esta página no twitter'
+submit-translation: 'Envie uma tradução/melhoria para esta página'
+twitter-text1: 'Compartilhar esta página no Twitter'
 twitter-text2: 'Estou colaborando para'
 twitter-text3: ' %40Mozilla Veja como é fácil contribuir também %23mozactivate'
 facebook-text: 'Compartilhar esta página no Facebook'
