--- a/locales/pt-BR/e10s-addons.xlf
+++ b/locales/pt-BR/e10s-addons.xlf
@@ -16,8 +16,8 @@ lang: en
 ref: e10s-addons
 parent: activities</source>
   <target xml:lang="pt-BR">layout: page
-title:  "e10s and Featured Add-ons"
-permalink: /e10s-addons/
+title:  "e10s e Extensões"
+permalink: /pt/e10s-addons/
 lang: en
 ref: e10s-addons
 parent: activities</target>
