--- a/locales/pt-BR/faq.xlf
+++ b/locales/pt-BR/faq.xlf
@@ -15,7 +15,7 @@ permalink: /faq/
 lang: en</source>
   <target xml:lang="pt-BR">layout: default
 title:  "Frequently Asked Questions"
-permalink: /faq/
+permalink: /pt/faq/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
